# llm_bot

./: .gitignore  Cargo.toml  README.md  config.toml  env.example
data/: balance_state.json  calibration_state.json  inactivity_report.json  inactivity_report_20260501_014855.json  inactivity_report_20260501_054901.json  inactivity_report_20260501_235203.json  inactivity_report_20260502_035230.json  inactivity_report_20260503_144958.json  shadow_trades.jsonl  skip_reasons.jsonl  trades.jsonl
scripts/: example_analyze_30g.json  explain_interpretable_score.py  optimize_analyze.py
scripts/analysis/: 01_volatility_filter_recalibration.py  02_dynamic_momentum_threshold.py  03_cluster_tie_analysis.py  04_secs_to_close_buckets.py  05_entry_price_bands.py  06_adaptive_penalty_rolling.py  07_multi_timeframe_config.py
src/: adaptive.rs  backtest.rs  config.rs  config_toml.rs  constants.rs  edge.rs  execution.rs  fill_tracker.rs  fs_atomic.rs  gamma.rs  inactivity_diagnostics.rs  inactivity_watchdog.rs  indicator_cache.rs  lib.rs  liquidity_adapt.rs  main.rs  market_matcher.rs  metrics.rs  order_tracker.rs  positions.rs  prometheus_export.rs  record_enums.rs  redeem.rs  resolution.rs  resolution_checker.rs  risk.rs  shadow_calibrator.rs  shadow_trade_optimization.rs  signal_extensions.rs  signals.rs  spot_price.rs  telemetry.rs  trading_loop.rs  types.rs  user_ws.rs  volatility.rs  walk_forward.rs
src/backtest/: mod.rs
