[package]
name = "polymarket-llm-bot"
version = "0.1.0"
edition = "2021"
default-run = "polymarket-llm-bot"

[lib]
name = "polymarket_llm_bot"
path = "src/lib.rs"

[[bin]]
name = "stats"
path = "src/bin/stats.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal math (same as MM bot)
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config from env + optional config.toml
dotenvy = "0.15"
toml = "0.8"

# Rate limiting
tokio-util = "0.7"
urlencoding = "2.1.3"

# Polymarket execution
polymarket-client-sdk = { version = "0.4.4", features = ["clob", "gamma", "ctf", "tracing"] }
alloy = { version = "1.7", features = ["signer-local", "providers"] }
hex = "0.4"

# UUID for order IDs
uuid = { version = "1", features = ["v4"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"
prometheus = "0.13"
axum = "0.7"
once_cell = "1.21"

[dev-dependencies]
tokio-test = "0.4"
